--- a/matesT2.tex
+++ b/matesT2.tex
@@ -275,7 +275,7 @@ Aunque a simple vista se vean muy parecidos, es notorio el suavizado que hacen l
 En la figura se muestra una lámpara colocada tres unidades hacia la derecha del eje \( y \) y una sombra creada por la región elíptica \( x^2 + 4y^2 \leq 5 \). Si el punto \( (-5, 0) \) está en el borde de la sombra, ¿qué tan arriba del eje \( x \) está colocada la lámpara?
 
 \begin{center}
-    \includegraphics[height=7.0cm]{./imagenes/lampara.png}
+    \includegraphics[height=7.0cm]{./imagenes/lampara.jpg}
 \end{center}
 
 Se nos da la ecuación de una elipse:
@@ -386,7 +386,7 @@ f''(x) = \frac{(1+x^2)^2 \cdot (0) - (-2x) \cdot (2(1+x^2)(2x))}{(1+x^2)^4} = \f
 \]
 
 \begin{center}
-    \includegraphics[height=15.0cm]{./imagenes/grafica1.png}
+    \includegraphics[width=17cm]{./imagenes/grafica1.png}
 \end{center}
 
 Aquí tienes la gráfica de las derivadas primera \( f'(x) \) (en azul) y segunda \( f''(x) \) (en rojo) de la función \( f(x) = \frac{1}{1+x^2} \) en el intervalo \( -5 \leq x \leq 5 \).
@@ -451,7 +451,7 @@ x \approx \pm 0.577
 \end{itemize}
 
 \begin{center}
-    \includegraphics[height=15.0cm]{./imagenes/grafica.png}
+    \includegraphics[width=17cm]{./imagenes/grafica.png}
 \end{center}
 
 %------ Ejercicio 05 ------%
